tests/error/pointer_address_non_lvalue.vbc
int main() {
    int a = 1;
    int* p = &(a + 1);
    return *p;
}
